# pre-commit-conventional-commits

./: .cursorrules  .devrail.yml  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
.opencode/: agents.yaml
conventional_commits/: __init__.py  check.py  config.py
tests/: __init__.py  test_check.py  test_config.py
