[metadata]
name = pre-commit-conventional-commits
version = 1.0.0
description = Pre-commit hook for enforcing DevRail conventional commit messages
author = DevRail
author_email = dev@devrail.dev
license = MIT
url = https://github.com/devrail-dev/pre-commit-conventional-commits

[options]
packages = conventional_commits
python_requires = >=3.9
install_requires =

[options.entry_points]
console_scripts =
    conventional-commits-check = conventional_commits.check:main
